# Resume-Extraction-Benchmark

./: .env  .env.llama  pyproject.toml
data/: sample_resume.txt
outputs/qualitative_benchmark/: checkpoint.json  results_20260225_123743.csv  results_20260225_123743.json  results_20260225_123743.xlsx
outputs/test_llama_azure/: llama_result_20260226_063456.csv  llama_result_20260226_063456.json  llama_result_20260226_063456.xlsx
src/resume_extractor/: extractor.py  metrics.py  schemas.py
tests/: cli.py  meta_llama.py  metrics.py  qualitative_benchmark.py  scoring.py  test_prompts.py
